--- a/imageplayer/Gemfile
+++ b/imageplayer/Gemfile
@@ -4,7 +4,7 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.8'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+#gem 'sqlite3'
 # Use SCSS for stylesheets
 # Tweeter Bootstrap
 gem "therubyracer"
@@ -42,4 +42,10 @@ gem 'spring',        group: :development
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
-
+group :development, :test do
+  gem 'sqlite3'
+end
+ group :production do
+   gem 'pg'
+ end
+gem 'unicorn'
