--- a/imageplayer/Gemfile
+++ b/imageplayer/Gemfile
@@ -42,10 +42,7 @@ gem 'spring',        group: :development
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
-group :development, :test do
-  gem 'sqlite3'
-end
- group :production do
-   gem 'pg'
- end
+
+  gem 'sqlite3',group: [:development, :test]
+   gem 'pg',group: :development
 gem 'unicorn'
